--- a/NRediSearch/NRediSearch.csproj
+++ b/NRediSearch/NRediSearch.csproj
@@ -1,12 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   
   <PropertyGroup>
-    <TargetFrameworks>$(LibraryTargetFrameworks)</TargetFrameworks>
+    <TargetFramework>netstandard1.6</TargetFramework>
     <VersionPrefix>0.1</VersionPrefix>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <PackageTags>Redis;Search;Modules;RediSearch</PackageTags>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\StackExchange.Redis\StackExchange.Redis.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="SourceLink.Create.GitHub" Version="2.1.2" />
   </ItemGroup>
 </Project>
